Minor layout issues caused by Bugfix #9

--- a/root/styles/prosilver/theme/kb.css
+++ b/root/styles/prosilver/theme/kb.css
@@ -62,7 +62,8 @@ textarea.desc {
 .request-icon span		{ background-image: url("{IMG_BUTTON_REQUEST_NEW_SRC}"); }
 
 .icon-kb {
-	background-image: url("{T_THEME_PATH}/images/icon_kb.gif");
+	/*background-image: url("{T_THEME_PATH}/images/icon_kb.gif");*/
+	background-image: url("{T_THEME_PATH}/images/icon-kb.png");
 	background-position: 0 50%;
 	background-repeat: no-repeat;
 	padding: 1px 0 0 23px;
@@ -125,6 +126,18 @@ a.kblink {
 .forabg span.corners-bottom{
 	clear:none;
 }
+
+.forabg{
+	clear:none;
+}
+
+.forumbg span.corners-bottom{
+	clear:none;
+}
+.forumbg{
+	clear:none;
+}
+
 .clearfloat { /* this class should be placed on a div or break element and should be the final element before the close of a container that should fully contain a float */
 	clear:both;
     height:0;
